--- a/practica-programada-2/ejercicio-3/index.html
+++ b/practica-programada-2/ejercicio-3/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale:1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -18,71 +18,86 @@
     </nav>
 
     <div class="content">
-        <h1 class="text-center mt-4">Gestion de Productos</h1>
-        <!-- Formulario para agregar usuarios -->
+        <h1 class="text-center mt-4">Gestión de Productos</h1>
+        <!-- Formulario para agregar productos -->
         <div class="container my-4 justify-content-center">
             <div class="d-flex justify-content-center mb-4">
-                <!-- abrir el modal -->
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal">Agregar Producto</button>
+                <!-- Abrir el modal -->
+                <button class="btn btn-primary" style="margin: 1em" data-bs-toggle="modal"
+                    data-bs-target="#productModal">Agregar
+                    Producto</button>
             </div>
         </div>
-        
-        <div class="container my-4">
-            <!-- lista de tareas -->
-            <table class="table table-striped">
+
+        <div class="container">
+            <!-- Lista de productos -->
+            <table class="table table-striped text-center">
                 <thead>
                     <tr>
                         <th>Nombre</th>
                         <th>Precio</th>
-                        <th>Categoria</th>
+                        <th>Categoría</th>
                         <th>Acciones</th>
+                        <th>
+                            <div class="d-flex justify-content-center align-items-center gap-2">
+                                <select class="form-select form-select-sm w-auto" id="category-filter">
+                                    <option selected>Selecciona una categoría</option>
+                                    <option value="Electronica">Electrónica</option>
+                                    <option value="Ropa">Ropa</option>
+                                    <option value="Alimentos">Alimentos</option>
+                                </select>
+                                <button class="btn btn-primary btn-sm category-filter">Filtrar</button>
+                            </div>
+                        </th>
                     </tr>
                 </thead>
-                <tbody id="userList">
+                <tbody id="productList">
                     <!-- Aquí se agregarán las filas dinámicamente -->
                 </tbody>
             </table>
         </div>
 
-        <div class="modal fade" id="taskModal">
+
+        <div class="modal fade" id="productModal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="taskModalLabel">Agregar Producto</h5>
+                        <h5 class="modal-title" id="productModalLabel">Agregar Producto</h5>
                         <button class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
-                        <form id="task-form">
-                            <input type="hidden" id="task-id">
+                        <form id="product-form">
+                            <input type="hidden" id="product-id">
                             <div class="mb-3">
-                                <label for="task-nombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="task-nombre" required>
+                                <label for="product-nombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="product-nombre" required>
                             </div>
                             <div class="mb-3">
-                                <label for="task-precio" class="form-label">Precio</label>
-                                <input type="number" class="form-control" id="task-precio" required>
+                                <label for="product-precio" class="form-label">Precio</label>
+                                <input type="number" class="form-control" id="product-precio" required>
                             </div>
                             <div class="mb-3">
-                                <label for="task-categoria" class="form-label">Categoria</label>
-                                <input type="text" class="form-control" id="task-categoria" required>
+                                <label for="product-categoria" class="form-label">Categoría</label>
+                                <select class="form-select" id="product-categoria">
+                                    <option selected>Selecciona una categoría</option>
+                                    <option value="Electronica">Electrónica</option>
+                                    <option value="Ropa">Ropa</option>
+                                    <option value="Alimentos">Alimentos</option>
+                                </select>
                             </div>
+                            <button type="submit" class="btn btn-primary">Agregar Producto</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="script.js"></script>
-
-
-
     </div>
 
     <footer>
-        <p>Copyright © 2024 Tienda Electronica</p>
+        <p>Copyright © 2024 Tienda Electrónica</p>
     </footer>
-
 </body>
 
 </html>
